--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2013,7 +2013,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cbdcb265",
+   "id": "69cbae2c",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0aeb1770",
+   "id": "c927d11d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2048,7 +2048,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4d822c04",
+   "id": "5d3e2241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2072,8 +2072,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "a5241c92",
+   "execution_count": 37,
+   "id": "c8691b7c",
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2083,7 @@
        "Name: Total Budget, dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2098,8 +2098,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "35b37fa3",
+   "execution_count": 38,
+   "id": "986838c4",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2119,8 +2119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "7f0b36fb",
+   "execution_count": 39,
+   "id": "d3928fb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,8 +2131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "ce12232e",
+   "execution_count": 40,
+   "id": "bbdf9149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,8 +2150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "85f8ddab",
+   "execution_count": 41,
+   "id": "af6e1474",
    "metadata": {},
    "outputs": [
     {
@@ -2209,13 +2209,459 @@
        "0                  81.9             75                86                65  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "district_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "235c3815",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Huang High School        District\n",
+       "Figueroa High School     District\n",
+       "Shelton High School       Charter\n",
+       "Hernandez High School    District\n",
+       "Griffin High School       Charter\n",
+       "Wilson High School        Charter\n",
+       "Cabrera High School       Charter\n",
+       "Bailey High School       District\n",
+       "Holden High School        Charter\n",
+       "Pena High School          Charter\n",
+       "Wright High School        Charter\n",
+       "Rodriguez High School    District\n",
+       "Johnson High School      District\n",
+       "Ford High School         District\n",
+       "Thomas High School        Charter\n",
+       "Name: type, dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Determine the school type.\n",
+    "per_school_types = school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "per_school_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9414d8d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           type\n",
+       "school_name                    \n",
+       "Huang High School      District\n",
+       "Figueroa High School   District\n",
+       "Shelton High School     Charter\n",
+       "Hernandez High School  District\n",
+       "Griffin High School     Charter\n",
+       "Wilson High School      Charter\n",
+       "Cabrera High School     Charter\n",
+       "Bailey High School     District\n",
+       "Holden High School      Charter\n",
+       "Pena High School        Charter\n",
+       "Wright High School      Charter\n",
+       "Rodriguez High School  District\n",
+       "Johnson High School    District\n",
+       "Ford High School       District\n",
+       "Thomas High School      Charter"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add the per_school_types into a DataFrame for testing.\n",
+    "df = pd.DataFrame(per_school_types)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "48360cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Huang High School        2917\n",
+       "Figueroa High School     2949\n",
+       "Shelton High School      1761\n",
+       "Hernandez High School    4635\n",
+       "Griffin High School      1468\n",
+       "Wilson High School       2283\n",
+       "Cabrera High School      1858\n",
+       "Bailey High School       4976\n",
+       "Holden High School        427\n",
+       "Pena High School          962\n",
+       "Wright High School       1800\n",
+       "Rodriguez High School    3999\n",
+       "Johnson High School      4761\n",
+       "Ford High School         2739\n",
+       "Thomas High School       1635\n",
+       "Name: size, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_school_counts = school_data_df.set_index([\"school_name\"])[\"size\"]\n",
+    "per_school_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f1028e05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bailey High School       4976\n",
+       "Johnson High School      4761\n",
+       "Hernandez High School    4635\n",
+       "Rodriguez High School    3999\n",
+       "Figueroa High School     2949\n",
+       "Huang High School        2917\n",
+       "Ford High School         2739\n",
+       "Wilson High School       2283\n",
+       "Cabrera High School      1858\n",
+       "Wright High School       1800\n",
+       "Shelton High School      1761\n",
+       "Thomas High School       1635\n",
+       "Griffin High School      1468\n",
+       "Pena High School          962\n",
+       "Holden High School        427\n",
+       "Name: school_name, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total student count.\n",
+    "per_school_counts = school_data_complete_df[\"school_name\"].value_counts()\n",
+    "per_school_counts "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "be1373cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Huang High School        1910635\n",
+       "Figueroa High School     1884411\n",
+       "Shelton High School      1056600\n",
+       "Hernandez High School    3022020\n",
+       "Griffin High School       917500\n",
+       "Wilson High School       1319574\n",
+       "Cabrera High School      1081356\n",
+       "Bailey High School       3124928\n",
+       "Holden High School        248087\n",
+       "Pena High School          585858\n",
+       "Wright High School       1049400\n",
+       "Rodriguez High School    2547363\n",
+       "Johnson High School      3094650\n",
+       "Ford High School         1763916\n",
+       "Thomas High School       1043130\n",
+       "Name: budget, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total school budget.\n",
+    "per_school_budget = school_data_df.set_index([\"school_name\"])[\"budget\"]\n",
+    "per_school_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "7969aba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Huang High School        655.0\n",
+       "Figueroa High School     639.0\n",
+       "Shelton High School      600.0\n",
+       "Hernandez High School    652.0\n",
+       "Griffin High School      625.0\n",
+       "Wilson High School       578.0\n",
+       "Cabrera High School      582.0\n",
+       "Bailey High School       628.0\n",
+       "Holden High School       581.0\n",
+       "Pena High School         609.0\n",
+       "Wright High School       583.0\n",
+       "Rodriguez High School    637.0\n",
+       "Johnson High School      650.0\n",
+       "Ford High School         644.0\n",
+       "Thomas High School       638.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the per capita spending.\n",
+    "per_school_capita = per_school_budget / per_school_counts\n",
+    "per_school_capita"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "491b3ad7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Huang High School     79\n",
+       "Huang High School     61\n",
+       "Huang High School     60\n",
+       "Huang High School     58\n",
+       "Huang High School     84\n",
+       "                      ..\n",
+       "Thomas High School    90\n",
+       "Thomas High School    70\n",
+       "Thomas High School    84\n",
+       "Thomas High School    90\n",
+       "Thomas High School    75\n",
+       "Name: math_score, Length: 39170, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the math scores.\n",
+    "student_school_math = student_data_df.set_index([\"school_name\"])[\"math_score\"]\n",
+    "student_school_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "2f77694d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the average test scores.\n",
+    "per_school_math = school_data_complete_df.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "\n",
+    "per_school_reading = school_data_complete_df.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "29cf4798",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       77.048432\n",
+       "Cabrera High School      83.061895\n",
+       "Figueroa High School     76.711767\n",
+       "Ford High School         77.102592\n",
+       "Griffin High School      83.351499\n",
+       "Hernandez High School    77.289752\n",
+       "Holden High School       83.803279\n",
+       "Huang High School        76.629414\n",
+       "Johnson High School      77.072464\n",
+       "Pena High School         83.839917\n",
+       "Rodriguez High School    76.842711\n",
+       "Shelton High School      83.359455\n",
+       "Thomas High School       83.418349\n",
+       "Wilson High School       83.274201\n",
+       "Wright High School       83.682222\n",
+       "Name: math_score, dtype: float64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_school_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b59fd9c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       81.033963\n",
+       "Cabrera High School      83.975780\n",
+       "Figueroa High School     81.158020\n",
+       "Ford High School         80.746258\n",
+       "Griffin High School      83.816757\n",
+       "Hernandez High School    80.934412\n",
+       "Holden High School       83.814988\n",
+       "Huang High School        81.182722\n",
+       "Johnson High School      80.966394\n",
+       "Pena High School         84.044699\n",
+       "Rodriguez High School    80.744686\n",
+       "Shelton High School      83.725724\n",
+       "Thomas High School       83.848930\n",
+       "Wilson High School       83.989488\n",
+       "Wright High School       83.955000\n",
+       "Name: reading_score, dtype: float64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_school_reading"
    ]
   }
  ],
