--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3631,7 +3631,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0ec3b2ca",
+   "id": "382ba460",
    "metadata": {},
    "outputs": [
     {
@@ -3776,7 +3776,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "985ca227",
+   "id": "32caca68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3793,7 +3793,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "bc8c9c97",
+   "id": "3d0f7404",
    "metadata": {},
    "outputs": [
     {
@@ -4032,7 +4032,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "18bb529a",
+   "id": "447a93ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4049,7 +4049,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "005337a0",
+   "id": "e58e0ea9",
    "metadata": {},
    "outputs": [
     {
@@ -4086,7 +4086,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "26e7574a",
+   "id": "b3d637b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4103,7 +4103,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7c9947b2",
+   "id": "dae9e1a3",
    "metadata": {},
    "outputs": [
     {
@@ -4140,7 +4140,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "f4fa8723",
+   "id": "28328a81",
    "metadata": {},
    "outputs": [
     {
@@ -4246,7 +4246,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "ee182034",
+   "id": "6116a9af",
    "metadata": {},
    "outputs": [
     {
@@ -4352,7 +4352,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5ead6d91",
+   "id": "0182090e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4376,7 +4376,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "cc969acc",
+   "id": "52712f0a",
    "metadata": {},
    "outputs": [
     {
@@ -4468,7 +4468,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "1e1a5dab",
+   "id": "2bff6b89",
    "metadata": {},
    "outputs": [
     {
@@ -4640,7 +4640,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "985037fc",
+   "id": "2fa9d95f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4664,7 +4664,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "f94cbc67",
+   "id": "700d503c",
    "metadata": {},
    "outputs": [
     {
@@ -4836,7 +4836,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "8895a7f7",
+   "id": "f6c71785",
    "metadata": {},
    "outputs": [
     {
@@ -4866,7 +4866,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "ae6d26d3",
+   "id": "075c64ad",
    "metadata": {},
    "outputs": [
     {
@@ -4893,7 +4893,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0937848b",
+   "id": "bf9c94cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4905,7 +4905,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "4f309e4b",
+   "id": "5f8580db",
    "metadata": {},
    "outputs": [
     {
@@ -5243,7 +5243,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "de4ca308",
+   "id": "22389bd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5262,7 +5262,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "05ed187e",
+   "id": "b8292ad7",
    "metadata": {},
    "outputs": [
     {
@@ -5288,7 +5288,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "2991d8c7",
+   "id": "9bbd0e9a",
    "metadata": {},
    "outputs": [
     {
@@ -5407,7 +5407,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "90ba203e",
+   "id": "9dc83069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5427,7 +5427,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "26420475",
+   "id": "d96e3949",
    "metadata": {},
    "outputs": [
     {
@@ -5538,7 +5538,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "690165ce",
+   "id": "9bcc4f50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5550,7 +5550,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "4debc84a",
+   "id": "6810fa71",
    "metadata": {},
    "outputs": [
     {
@@ -5714,7 +5714,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "94746e34",
+   "id": "e7136612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5733,7 +5733,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "bbf005f8",
+   "id": "ba8f6e28",
    "metadata": {},
    "outputs": [
     {
@@ -5835,7 +5835,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "73ac94c2",
+   "id": "10e1de7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5855,7 +5855,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "731d6b00",
+   "id": "5e8afad2",
    "metadata": {},
    "outputs": [
     {
@@ -5948,8 +5948,223 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "id": "620d7472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "db5c75e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "9a34fb00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "ebcbf1e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "65928731",
+   "id": "5ab88bf0",
    "metadata": {},
    "outputs": [],
    "source": []
