--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -2104,8 +2104,6 @@
        "      <th>% Passing Math</th>\n",
        "      <th>% Passing Reading</th>\n",
        "      <th>% Overall Passing</th>\n",
-       "      <th>Spending Ranges (Per Student)</th>\n",
-       "      <th>School Size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2120,8 +2118,6 @@
        "      <td>94.133477</td>\n",
        "      <td>97.039828</td>\n",
        "      <td>91.334769</td>\n",
-       "      <td>&lt;$584</td>\n",
-       "      <td>Medium (1500-3500)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Thomas High School</th>\n",
@@ -2134,8 +2130,6 @@
        "      <td>93.185690</td>\n",
        "      <td>97.018739</td>\n",
        "      <td>90.630324</td>\n",
-       "      <td>$630-644</td>\n",
-       "      <td>Medium (1500-3500)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
@@ -2148,8 +2142,6 @@
        "      <td>93.392371</td>\n",
        "      <td>97.138965</td>\n",
        "      <td>90.599455</td>\n",
-       "      <td>$585-629</td>\n",
-       "      <td>Small (&lt;1500)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wilson High School</th>\n",
@@ -2162,8 +2154,6 @@
        "      <td>93.867718</td>\n",
        "      <td>96.539641</td>\n",
        "      <td>90.582567</td>\n",
-       "      <td>&lt;$584</td>\n",
-       "      <td>Medium (1500-3500)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pena High School</th>\n",
@@ -2176,8 +2166,6 @@
        "      <td>94.594595</td>\n",
        "      <td>95.945946</td>\n",
        "      <td>90.540541</td>\n",
-       "      <td>$585-629</td>\n",
-       "      <td>Small (&lt;1500)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2205,22 +2193,15 @@
        "Wilson High School               83.989488       93.867718          96.539641   \n",
        "Pena High School                 84.044699       94.594595          95.945946   \n",
        "\n",
-       "                     % Overall Passing Spending Ranges (Per Student)  \\\n",
-       "Cabrera High School          91.334769                         <$584   \n",
-       "Thomas High School           90.630324                      $630-644   \n",
-       "Griffin High School          90.599455                      $585-629   \n",
-       "Wilson High School           90.582567                         <$584   \n",
-       "Pena High School             90.540541                      $585-629   \n",
-       "\n",
-       "                            School Size  \n",
-       "Cabrera High School  Medium (1500-3500)  \n",
-       "Thomas High School   Medium (1500-3500)  \n",
-       "Griffin High School       Small (<1500)  \n",
-       "Wilson High School   Medium (1500-3500)  \n",
-       "Pena High School          Small (<1500)  "
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.630324  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2901,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +3041,7 @@
        "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
